# my_agent_communication

./: CMakeLists.txt
common/: CMakeLists.txt
common/include/agent_rpc/common/: circuit_breaker.h  load_balancer.h  message_converter.h  rpc_framework.h  serializer.h
common/src/: message_converter.cpp  serializer.cpp
include/agent_rpc/: circuit_breaker.h  load_balancer.h  logger.h  metric.h  metrics.h  rpc_client.h  rpc_framework.h  rpc_server.h  service_register.h  service_registry.h
mcp/: CMakeLists.txt
mcp/include/mcp/: mcp_agent_integration.h  mcp_client.h
mcp/include/mcp/rag/: embedding_cache.h  embedding_service.h  tool_retriever.h  tool_validator.h  vector_index.h
mcp/src/: mcp_agent_integration.cpp  mcp_client.cpp  mcp_tool_manager.cpp
mcp/src/rag/: embedding_cache.cpp  embedding_service.cpp  tool_retriever.cpp  tool_validator.cpp  vector_index.cpp
proto/: CMakeLists.txt  common.proto
src/: CMakeLists.txt  circuit_breaker.cpp  load_balancer.cpp  logger.cpp  metric.cpp  metrics.cpp  rpc_client.cpp  rpc_framework.cpp  rpc_server.cpp  service_register.cpp  service_registry.cpp
tests/: CMakeLists.txt  test_mcp_integration.cpp  test_rpc_framework.cpp
